Note: this file is in reversed chronological order (bottom to top).


 - BRLTTY 3.3.1 released:
    Log "braille driver initialization failed" fills /var when display not connected. (dm)
       (reported by Thomas Stivers <stivers_t@tomass.dyndns.org>)

August 4, 2003:
 - BRLTTY 3.3 released:
   Let rpm determine requirements. (dm)
   Papenmeier driver enhancements: (dm,bd)
      Write packet as single operation rather than in 3 parts (header, data, trailer).
      Log output packets.
      Log full identity packet rather than just first 4 bytes.
   Configuring with --without-screen-driver now uses scr_null. (dm)
   Remove the use of sched_yield() to restore tone length accuracy. (np)
   Add the "Say-Line Mode" (Immediate, Enqueue) preference. (np,dm)
   Rename the default for the Linux screen driver option acm from default to auto. (dm)
   No longer strip executables in the build tree. (dm)
   Compile all drivers even if built-in ones are configured. (dm)
   Add the -L (--library-directory=) option to brltty and brltest. (dm)
   Wrap long output lines from configure --help. (dm)
   Enhancements to en-us-g2 contraction table. (jb)
   Braille Lite driver enhancements: (dm)
      Some initialization failures gobble resources.
      Add Millennium support (whiz wheels, advance bar combinations).
      Change keyboard emulation mode default from off to on.
      Allow chorded keyboard input when not in keyboard emulation mode.
   Check for the pow() function during autoconf. (dm)
   The global variable languageCount in the ViaVoice speech driver isn't used. (dm)
   Add basic support for Gnopernicus. (ml)
   autogen.sh invokes autoconf (overridable by $BRLTTY_AUTOCONF) instead of autoconf-2.53. (dm)
   Clean up the make file in the Documents subdirectory. (dm)
   Remove the German BRLTTY manual since it's so out-of-date. (dm)
   Start implementing the Autospeak preference. (dm)
   README.Debian still had references to /sbin/brltty (now in /bin). (sh)