@@ -2,6 +2,8 @@ Note: this file is in reversed chronological order (bottom to top).
 
 
  - BRLTTY 3.3.1 released:
+    Build fails with standalone-programs and braille-driver=vd,vh. (dm)
+       (reported by Osvaldo La Rosa <info@brlspeak.net>)
     Log "braille driver initialization failed" fills /var when display not connected. (dm)
        (reported by Thomas Stivers <stivers_t@tomass.dyndns.org>)
 
